k8s/services/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: streamlit
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: tcg-toolkit.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: streamlit-service
              port:
                number: 8501
