k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: streamlit
spec:
  rules:
    - host: tcg-toolkit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-service
                port:
                  number: 8501
